--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Boris Dinkevich & Ilya Gelman",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.21.1",
     "jquery": "3.2.1",
     "redux": "3.7.2"
   },
